force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Auto_Create_Mandate_Recurring_Payment_DD__c.field-meta.xml
<CustomField>
    <fullName>cpm__Auto_Create_Mandate_Recurring_Payment_DD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true a mandate will be created when an Recurring or Single Payment is created of type Direct Debit which doesn&apos;t already has a relationship to a Mandate</description>
    <inlineHelpText>Wanneer aangevinkt zal er een mandaat aangemaakt worden wanneer een terugkerende betaling van het type automatische incasso gemaakt wordt en deze nog geen relatie met een mandaat heeft</inlineHelpText>
    <label>Autocreate mandate for Direct Debits</label>
    <type>Checkbox</type>
</CustomField>