force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Contact_Analytics_Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Contact_Analytics_Last_Run_Date__c</fullName>
    <label>Contact Analytics Last Run Date</label>
    <type>Date</type>
</CustomField>