force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Last_Change_Setup_Made__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Change_Setup_Made__c</fullName>
    <label>Last Change Setup Made</label>
    <type>DateTime</type>
</CustomField>