force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Last_Used_Recalculation_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Used_Recalculation_Date__c</fullName>
    <label>Last Used Recalculation Date</label>
    <type>Date</type>
</CustomField>