force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Payment_Request_Async__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Request_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled the Payemtn Request Generator Run batch will fire queueable instead of running in batch</description>
    <label>Payment Request Async</label>
    <type>Checkbox</type>
</CustomField>