force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Store_Informal_Logs__c.field-meta.xml
<CustomField>
    <fullName>cpm__Store_Informal_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Informal Logs</label>
    <type>Checkbox</type>
</CustomField>